--- a/README
+++ b/README
@@ -17,15 +17,15 @@ easier by using a slightly higher level library: xgbutil.
 
 Quick Usage
 ===========
-go get github.com/BurntSushi/xgb
-go run go/path/src/github.com/BurntSushi/xgb/examples/create-window/main.go
+go get github.com/Ptitlu42/xgb
+go run go/path/src/github.com/Ptitlu42/xgb/examples/create-window/main.go
 
-BurntSushi's Fork
+Ptitlu42's Fork
 =================
 I've forked the XGB repository from Google Code due to inactivty upstream.
 
 Godoc documentation can be found here:
-https://godoc.org/github.com/BurntSushi/xgb
+https://godoc.org/github.com/Ptitlu42/xgb
 
 Much of the code has been rewritten in an effort to support thread safety
 and multiple extensions. Namely, go_client.py has been thrown away in favor
